public/stylesheet.css
/* ... */
/* Header */

.header {
  background-color: var(--color-background);
  padding: var(--header-top-offset) var(--side-offset);
  z-index: 10;
}
@media (max-width: 860px) {
  .header {
    padding-top: 2rem;
  }
}
@media (max-width: 640px) {
  .header {
    background-color: var(--color-background);
    padding-top: 1rem;
  }
}

.header__title {
  font-family: var(--font-family-stylized);
  font-size: 1.7rem;
  font-weight: 600;
  flex-basis: 40%;
  margin: 0 0 0.5rem;
}

.header__description {
  font-family: var(--font-family-stylized);
  font-size: 0.9rem;
  margin: 0.2rem 0;
}

.header__list {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  float: right;
  justify-content: flex-end;
  margin: 0.2rem 0 0;
}
@media (max-width: 640px) {
  .header__list {
    float: none;
    justify-content: space-around;
    margin: 0 0 1rem;
  }
}
.header__list-item {
  height: 55px;
  width: 55px;
  background-color: var(--color-background);
  fill: var(--color-button-active);
}

.header__list-icon:hover,
.header__list-icon:focus {
  cursor: pointer;
  fill: var(--color-background);
  background-color: var(--color-button-active);
  border-radius: var(--border-radius-large);
}

.header__list-icon {
  padding: 10px;
  height: 100%;
  width: 100%;
  outline: none;
  display: inline-block;
  fill: var(--color-button-active);
}

/* Main */

.main {
  background-color: var(--color-background);
  flex-grow: 2;
  padding: 0 var(--side-offset) 2rem;
  z-index: 9;
}

/* Control */

.sticky-header-shadow {
  box-shadow: 0 4px 1px 0 var(--color-shadows);
  height: 1px;
  position: sticky;
  width: 100%;
  top: 3.75rem;
  z-index: 9;
}
@media (max-width: 640px) {
  .sticky-header-shadow {
    display: none;
  }
}

.control {
  background-color: var(--color-background);
  display: flex;
  flex-direction: row;
  flex-wrap: wrap-reverse;
  margin: 0 calc(-1 * var(--side-offset)) 1.2rem;
  padding: 0.8rem var(--side-offset);
  position: sticky;
  top: -1.7rem;
  z-index: 10;
}
@media (max-width: 640px) {
  .control {
    background-color: var(--color-background);
    box-shadow: none;
    justify-content: flex-end;
    margin-bottom: 0.5rem;
    position: relative;
    top: -1.2rem;
  }
}

.control-field {
  display: flex;
  flex-direction: column;
}
.control-field:first-of-type {
  flex-basis: 25%;
  min-width: 260px;
}
.control-field:not(:last-of-type) {
  margin-right: 1rem;
}
@media (max-width: 735px) {
  .control-field:first-of-type {
    min-width: 190px;
  }
  .control-field:not(:last-of-type) {
    margin-right: 0.6rem;
  }
}

@media (max-width: 640px) {
  .control-field {
    margin: 0.5rem 0 0.5rem 1rem;
  }
  .control-field:first-of-type {
    flex-basis: 70%;
    flex-grow: 1;
    margin: 0.5rem 0;
  }
}

.control-field__title {
  font-family: var(--font-family-stylized);
  font-size: 1rem;
  font-weight: 400;
  line-height: 1rem;
  margin-bottom: 0.7rem;
  position: relative;
}
body.no-js .control-field__title {
  color: var(--color-disabled);
}

.control-field__row {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: flex-start;
}

.control__button,
.control__input {
  background-color: transparent;
  color: var(--color-text-default);
  height: 2.4rem;
}

.control__input {
  border: 0.1rem solid var(--color-button-border);
  border-radius: var(--border-radius-small);
  font-family: var(--font-family-stylized);
  outline: none;
  padding: 0.4rem 2rem 0.4rem 0.8rem;
  width: 100%;
}
.control__input:focus {
  box-shadow: 0 0 3px 0 var(--color-shadows);
}
@media (max-width: 640px) {
  .control__input {
    font-size: 1.1rem;
  }
}

.control__button {
  border: 0.1rem solid var(--color-button-border);
  border-left-width: 0;
  cursor: default; /* Button should not work when JS is disabled */
  fill: var(--color-button-hover);
  width: 2.4rem;
  padding: 0.4rem;
}
.first__button {
  border-left-width: 0.1rem;
  border-top-left-radius: var(--border-radius-small);
  border-bottom-left-radius: var(--border-radius-small);
}
.last__button {
  border-top-right-radius: var(--border-radius-small);
  border-bottom-right-radius: var(--border-radius-small);
}
.control__button:not(:disabled):focus,
.control__button:not(:disabled):hover {
  box-shadow: 0 0 3px 0 var(--color-shadows);
  cursor: pointer;
}

/* Control - disabled */

.control__input:disabled {
  border-color: var(--color-disabled);
}

.control__button:disabled {
  border-color: var(--color-disabled) !important;
  fill: var(--color-disabled);
}

/* Control - search */

.search__wrapper {
  position: relative;
}

.search-input {
  padding-right: 20px;
}

.search #search-clear {
  cursor: pointer;
  display: inline;
  font-family: var(--font-family-stylized);
  font-size: 1.5rem;
  line-height: 2.3rem;
  padding: 0 12px;
  position: absolute;
  right: 0;
  top: 0;
}
.search #search-clear::selection {
  background-color: transparent;
}

input[type='search']::-webkit-search-decoration,
input[type='search']::-webkit-search-cancel-button,
input[type='search']::-webkit-search-results-button,
input[type='search']::-webkit-search-results-decoration {
  -webkit-appearance: none;
}
input[type='search']::-ms-clear,
input[type='search']::-ms-reveal {
  display: none;
  width: 0;
  height: 0;
}

/* Control - order */
body.order-alpha #order-alpha,
body.order-color #order-color,
body.order-relevance #order-relevance {
  background-color: var(--color-button-active);
  border-color: var(--color-button-active);
  color: var(--color-background);
  cursor: default;
  fill: var(--color-background);
}

/* Control - color */
body.download-pdf #download-pdf,
body.download-svg #download-svg,
body.layout-comfortable #layout-comfortable,
body.layout-compact #layout-compact,
body.dark #color-scheme-dark,
body.light #color-scheme-light,
body:not(.dark):not(.light) #color-scheme-system:not(:disabled) {
  background-color: var(--color-button-active);
  border-color: var(--color-button-active);
  cursor: default;
  fill: var(--color-background);
}
/* ... */

